# aoriarh

./: .env.example  .gitignore  CAHIER_DES_CHARGES.md  CLAUDE.md  Caddyfile  DROITS.md  Makefile  TODO_PRODUCTION.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 068057ea672a_document_org_nullable.py  303953a07506_add_invitations_table.py  83a41dd9a782_initial_tables.py  a1b2c3d4e5f6_add_indexation_duration_ms.py  a2b3c4d5e6f7_widen_solution_column.py  aa1b2c3wave5_add_campaign_waves.py  b1z2cockpit3_add_staff_role.py  b3c4d5e6f7a8_add_accounts_table.py  b7f8e9a0c1d2_add_performance_indexes.py  bb2c3d4send6_add_recipient_send_attempts.py  c4d5e6f7a8b9_add_google_auth.py  c8d9e0f1a2b3_add_audit_logs_table.py  cc3d4e5unsub7_add_email_unsubscribes.py  d5e6f7a8b9c0_add_account_members.py  e0f1a2b3c4d5_add_indexation_progress.py  (+25 more)
backend/app/: main.py  worker.py
backend/scripts/: stripe_bootstrap.py
backend/tests/: conftest.py  test_admin_documents.py  test_ani_ingestion.py  test_article_chunker.py  test_auth.py  test_billing_service.py  test_emailing_waves.py  test_fiche_service.py  test_force_split.py  test_health.py  test_intent_router_prefilter.py  test_invitations.py  test_jorf_service.py  test_organisations.py  test_rag_balance.py  test_rag_ccn_floor.py  test_rag_cloisonnement_demo.py  test_rag_condensation.py  test_rag_geo_filter.py  test_rag_parent_expansion.py  test_rag_query_expansion.py  test_rag_reference_following.py  test_rag_reranker.py  test_rag_score_floor.py  test_rag_source_intent.py  test_rag_trace.py  test_security.py  test_users.py
(+287 files in other folders)
